--- a/packages/vite-plugin-chrome-extension-reload/package.json
+++ b/packages/vite-plugin-chrome-extension-reload/package.json
@@ -37,6 +37,7 @@
     "@types/chrome": "^0.0.287",
     "@types/node": "^22.0.0",
     "@types/ws": "^8.5.13",
+    "rollup": "^4.53.3",
     "tsup": "^8.3.5",
     "typescript": "^5.9.3",
     "vite": "^7.0.0"
